k8s/2.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: free-websockets
  name: web
  labels:
    app: free-websockets
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: free-websockets-web-container
  template:
    metadata:
      namespace: free-websockets
      labels:
        pod: free-websockets-web-container
    spec:
      containers:
        - name: free-websockets-web
          image: endykaufman/free-websockets:latest
          ports:
            - containerPort: 5000
