k8s/3.service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: free-websockets
  name: web-service
spec:
  selector:
    pod: free-websockets-web-container
  ports:
    - protocol: TCP
      port: 5000
  type: ClusterIP
