k8s/4.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: free-websockets
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: free-websocketsweb-service
    nginx.org/websocket-services: free-websockets-service
spec:
  tls:
  - hosts:
      - localhost
    secretName: echo-tls
  backend:
    serviceName: web-service
    servicePort: 80
  rules:
  - host: localhost
    http:
      paths:
      - path: /free-websockets
        backend:
          serviceName: web-service
          servicePort: 5000
